salesforce-main/src/main/default/objects/Campaign/fields/Billboard_Postcodes__c.field-meta.xml
<CustomField>
    <fullName>Billboard_Postcodes__c</fullName>
    <description>[BD] Predates Apollo Salesforce team.  5/11/11</description>
    <label>Billboard Postcodes</label>
    <length>100</length>
    <type>Text</type>
</CustomField>