salesforce-main/src/main/default/objects/Campaign/fields/Campaign_Member_Source__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Member_Source__c</fullName>
    <description>[BD] Predates Apollo Salesforce team.  5/11/11</description>
    <label>Campaign Member Source</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Existing Leads</fullName>
            </value>
            <value>
                <fullName>Existing Contacts - Non Members</fullName>
            </value>
            <value>
                <fullName>Existing Contacts - Members</fullName>
            </value>
            <value>
                <fullName>List - One off</fullName>
            </value>
            <value>
                <fullName>List - Longer Term</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>