salesforce-main/src/main/default/objects/Campaign/fields/CNID__c.field-meta.xml
<CustomField>
    <fullName>CNID__c</fullName>
    <description>Campaign ID. Salesforce-generated unique identifier for marketing campaigns.  Used to associate lead uploads to campaign.</description>
    <displayFormat>CN{0}</displayFormat>
    <inlineHelpText>Unique identification number for this campaign; every campaign will have a unique ID.  This ID is referenced for uploading students and campaign associations into Salesforce.</inlineHelpText>
    <label>CNID</label>
    <type>AutoNumber</type>
</CustomField>