salesforce-main/src/main/default/objects/Campaign/fields/Delivery_Time__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Time__c</fullName>
    <description>[BD] Predates Apollo Salesforce team.  5/11/11</description>
    <label>Delivery Time</label>
    <length>10</length>
    <type>Text</type>
</CustomField>