salesforce-main/src/main/default/objects/Campaign/fields/Design_Costs__c.field-meta.xml
<CustomField>
    <fullName>Design_Costs__c</fullName>
    <description>[BD] Predates Apollo Salesforce team.  5/11/11</description>
    <label>Design Costs</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>