salesforce-main/src/main/default/objects/Campaign/fields/Email_Template_Used__c.field-meta.xml
<CustomField>
    <fullName>Email_Template_Used__c</fullName>
    <description>[BD] Predates Apollo Salesforce team.  5/11/11</description>
    <label>Email Template Used</label>
    <length>50</length>
    <type>Text</type>
</CustomField>