salesforce-main/src/main/default/objects/Campaign/fields/End_of_Use_Date__c.field-meta.xml
<CustomField>
    <fullName>End_of_Use_Date__c</fullName>
    <description>[BD] Predates Apollo Salesforce team.  5/11/11</description>
    <label>End of Use Date</label>
    <type>Date</type>
</CustomField>