salesforce-main/src/main/default/objects/Campaign/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <description>Declared end time for specific events such as open days.</description>
    <label>End Time</label>
    <type>DateTime</type>
</CustomField>