salesforce-main/src/main/default/objects/Campaign/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <description>Used to segment marketing campaigns between undergrad, postgrad, and PE.</description>
    <label>Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Postgraduate</fullName>
            </value>
            <value>
                <fullName>Undergraduate</fullName>
            </value>
            <value>
                <fullName>Professional Education</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>