salesforce-main/src/main/default/objects/Campaign/fields/Location_Address__c.field-meta.xml
<CustomField>
    <fullName>Location_Address__c</fullName>
    <description>Formula to display the location address information.  Used to populate email templates.</description>
    <formula>Location__r.Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>[REMOVE] Location Address</label>
    <type>Text</type>
</CustomField>