salesforce-main/src/main/default/objects/Campaign/fields/Marketing_Link__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Link__c</fullName>
    <description>Allows campaign member to respond to marketing programs and events</description>
    <label>Marketing Link</label>
    <type>Url</type>
</CustomField>