salesforce-main/src/main/default/objects/Campaign/fields/Programme__c.field-meta.xml
<CustomField>
    <fullName>Programme__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link the programme that the event is promoting.</description>
    <label>Programme</label>
    <referenceTo>Programme__c</referenceTo>
    <relationshipLabel>Campaigns</relationshipLabel>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>