salesforce-main/src/main/default/objects/Campaign/fields/Publication__c.field-meta.xml
<CustomField>
    <fullName>Publication__c</fullName>
    <description>[BD] Predates Apollo Salesforce team.  5/11/11</description>
    <label>Publication</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>124 Law</fullName>
            </value>
            <value>
                <fullName>Accountancy</fullName>
            </value>
            <value>
                <fullName>Accountancy Age</fullName>
            </value>
            <value>
                <fullName>Accounting &amp; Business</fullName>
            </value>
            <value>
                <fullName>AWS Link</fullName>
            </value>
            <value>
                <fullName>Best Practice</fullName>
            </value>
            <value>
                <fullName>CFA Magazine</fullName>
            </value>
            <value>
                <fullName>City AM</fullName>
            </value>
            <value>
                <fullName>CLC Chronicle</fullName>
            </value>
            <value>
                <fullName>Constabulary</fullName>
            </value>
            <value>
                <fullName>Corporate Financier</fullName>
            </value>
            <value>
                <fullName>Counsel</fullName>
            </value>
            <value>
                <fullName>Epoch Times</fullName>
            </value>
            <value>
                <fullName>Finance Director</fullName>
            </value>
            <value>
                <fullName>Financial Management</fullName>
            </value>
            <value>
                <fullName>Financial News</fullName>
            </value>
            <value>
                <fullName>Financial Times</fullName>
            </value>
            <value>
                <fullName>Guardian</fullName>
            </value>
            <value>
                <fullName>Independent</fullName>
            </value>
            <value>
                <fullName>India Times</fullName>
            </value>
            <value>
                <fullName>In-House Lawyer</fullName>
            </value>
            <value>
                <fullName>Law Society Gazette</fullName>
            </value>
            <value>
                <fullName>Lawyer</fullName>
            </value>
            <value>
                <fullName>Legal Week</fullName>
            </value>
            <value>
                <fullName>Muslim Weekly</fullName>
            </value>
            <value>
                <fullName>NQ Magazine</fullName>
            </value>
            <value>
                <fullName>PASS</fullName>
            </value>
            <value>
                <fullName>Police Life</fullName>
            </value>
            <value>
                <fullName>Police Review</fullName>
            </value>
            <value>
                <fullName>PQ Magazine</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>