salesforce-main/src/main/default/objects/Campaign/fields/School__c.field-meta.xml
<CustomField>
    <fullName>School__c</fullName>
    <description>Used to segment campaigns between law school and business school.</description>
    <label>School</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Law</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>