salesforce-main/src/main/default/objects/Campaign/fields/Staging_PK__c.field-meta.xml
<CustomField>
    <fullName>Staging_PK__c</fullName>
    <description>[BD] Predates Apollo Salesforce team.  5/11/11

Staging ID was once used as part of a nightly process to push in data from external systems.

This process was disabled and subsequently these fields have been removed on other objects.</description>
    <externalId>true</externalId>
    <label>[REMOVE] Staging PK</label>
    <length>50</length>
    <type>Text</type>
</CustomField>