salesforce-main/src/main/default/objects/Campaign/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <description>Start time of the event (e.g. open day).  Required for some events and used to populate email templates.</description>
    <label>Start Time</label>
    <type>DateTime</type>
</CustomField>