salesforce-main/src/main/default/objects/Campaign/fields/Target_Group__c.field-meta.xml
<CustomField>
    <fullName>Target_Group__c</fullName>
    <description>[BD] Predates Apollo Salesforce team.  5/11/11</description>
    <label>Target Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Random</fullName>
            </value>
            <value>
                <fullName>Regular</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>