salesforce-main/src/main/default/objects/Campaign/fields/Targeted_Faculty__c.field-meta.xml
<CustomField>
    <fullName>Targeted_Faculty__c</fullName>
    <description>[BD] Predates Apollo Salesforce team.  5/11/11</description>
    <label>Targeted Faculty</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A&amp;T</fullName>
            </value>
            <value>
                <fullName>FS</fullName>
            </value>
            <value>
                <fullName>HR</fullName>
            </value>
            <value>
                <fullName>LM</fullName>
            </value>
            <value>
                <fullName>PD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>