salesforce-main/src/main/default/objects/Campaign/fields/Website__c.field-meta.xml
<CustomField>
    <fullName>Website__c</fullName>
    <description>[BD] Predates Apollo Salesforce team.  5/11/11</description>
    <label>Website</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>T&amp;C</fullName>
            </value>
            <value>
                <fullName>www.accaglobal.com</fullName>
            </value>
            <value>
                <fullName>www.accountancyage.com</fullName>
            </value>
            <value>
                <fullName>www.cfainstitute.org</fullName>
            </value>
            <value>
                <fullName>www.cimaglobal.com</fullName>
            </value>
            <value>
                <fullName>www.icaew.co.uk</fullName>
            </value>
            <value>
                <fullName>www.passmagazine.com</fullName>
            </value>
            <value>
                <fullName>www.sii.org.uk</fullName>
            </value>
            <value>
                <fullName>www.sourcethecourse.com</fullName>
            </value>
            <value>
                <fullName>www.taxationweb.com</fullName>
            </value>
            <value>
                <fullName>www.thelawyer.com</fullName>
            </value>
            <value>
                <fullName>www.thesolicitorsgroup.co.uk</fullName>
            </value>
            <value>
                <fullName>www.thisislondon.co.uk</fullName>
            </value>
            <value>
                <fullName>www.timeslondon.co.uk</fullName>
            </value>
            <value>
                <fullName>www.tsg.org</fullName>
            </value>
            <value>
                <fullName>www.uksip.org</fullName>
            </value>
            <value>
                <fullName>www.waterlow.com</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>