salesforce-main/src/main/default/objects/Campaign/fields/Workplace_Company__c.field-meta.xml
<CustomField>
    <fullName>Workplace_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>[BD] Predates Apollo Salesforce team.  5/11/11</description>
    <label>Workplace Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Campaigns</relationshipLabel>
    <relationshipName>Campaign</relationshipName>
    <type>Lookup</type>
</CustomField>