salesforce-main/src/main/default/objects/Campaign/recordTypes/Admissions_Campaign.recordType-meta.xml
<RecordType>
    <fullName>Admissions_Campaign</fullName>
    <active>true</active>
    <description>Used to create campaign hierarchy and capture general (non-specific) campaign data.</description>
    <label>Campaign</label>
</RecordType>