salesforce-main/src/main/default/objects/Campaign/recordTypes/Admissions_Event.recordType-meta.xml
<RecordType>
    <fullName>Admissions_Event</fullName>
    <active>true</active>
    <description>Campaign template specific for events such as open days.</description>
    <label>Event</label>
</RecordType>