salesforce-main/src/main/default/objects/Campaign/recordTypes/BD_Campaign_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>BD_Campaign_Record_Type</fullName>
    <active>true</active>
    <description>Used to capture business development campaigns.</description>
    <label>Business Development</label>
</RecordType>