salesforce-main/src/main/default/objects/Campaign/recordTypes/Vanta_Campaign.recordType-meta.xml
<RecordType>
    <fullName>Vanta_Campaign</fullName>
    <active>true</active>
    <description>Vanta specific Campaign</description>
    <label>Vanta Campaign</label>
</RecordType>